--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@mui/material-nextjs": "^6.1.7",
+    "gsap": "^3.12.5",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
